# xlsx_schedule_2_ics

./: .gitignore  main.py  pyproject.toml
schedules/: 111аб, 111ап.xlsx  112ап.xlsx  113аб, 113ап.xlsx  211ап.xlsx  212ап.xlsx  213ап.xlsx  310ап.xlsx  315ап.xlsx  318ап.xlsx  486аб, 486ап.xlsx  487аб, 487ап.xlsx  488аб, 488ап.xlsx  489аб, 489ап.xlsx  511або, 511апо.xlsx  511апп.xlsx  511аппс.xlsx  514апм.xlsx  514апо.xlsx  514апт.xlsx
