[tool.poetry]
name = "xlsx-schedule-2-ics"
version = "0.1.0"
description = ""
authors = ["Vladimir Sidorov <root@vov.su>"]
readme = "README.md"
packages = [{include = "xlsx_schedule_2_ics"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.1"
ics = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
